@@ -24,56 +24,36 @@ import org.pageseeder.xmlwriter.XML.NamespaceAware;
 import org.pageseeder.xmlwriter.XMLStringWriter;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 public class HTMLBlockParserTest {
 
-  public HTMLBlockParserTest() {
-  }
-
   @Test
-  public void testEscaping() throws Exception {
-    List<String> e1 = Arrays.asList("This is \\*escaped star\\*");
-    List<String> e2 = Arrays.asList("This is \\[escaped brackets\\]");
-    List<String> e3 = Arrays.asList(" \\- Red", " \\- Green", " \\- Blue");
+  public void testEscaping() {
+    List<String> e1 = List.of("This is \\*escaped star\\*");
+    List<String> e2 = List.of("This is \\[escaped brackets\\]");
+    List<String> e3 = List.of(" \\- Red", " \\- Green", " \\- Blue");
     Assert.assertEquals("<p>This is *escaped star*</p>", toHTML(e1));
     Assert.assertEquals("<p>This is [escaped brackets]</p>", toHTML(e2));
     Assert.assertEquals("<p>- Red<br/>\n- Green<br/>\n- Blue</p>", toHTML(e3));
   }
 
   @Test
-  public void testHeadingSetext() throws Exception {
-    List<String> h1 = Arrays.asList("This is an H1", "=============");
-    List<String> h2 = Arrays.asList("This is an H2", "-------------");
+  public void testHeadingSetext() {
+    List<String> h1 = List.of("This is an H1", "=============");
+    List<String> h2 = List.of("This is an H2", "-------------");
     Assert.assertEquals("<h1>This is an H1</h1>", toHTML(h1));
     Assert.assertEquals("<h2>This is an H2</h2>", toHTML(h2));
   }
 
   @Test
-  public void testHeadingATX() throws Exception {
-    List<String> h1 = Arrays.asList("# This is an H1");
-    List<String> h2 = Arrays.asList("## This is an H2");
-    List<String> h3 = Arrays.asList("### This is an H3");
-    List<String> h4 = Arrays.asList("#### This is an H4");
-    List<String> h5 = Arrays.asList("##### This is an H5");
-    List<String> h6 = Arrays.asList("###### This is an H6");
-    Assert.assertEquals("<h1>This is an H1</h1>", toHTML(h1));
-    Assert.assertEquals("<h2>This is an H2</h2>", toHTML(h2));
-    Assert.assertEquals("<h3>This is an H3</h3>", toHTML(h3));
-    Assert.assertEquals("<h4>This is an H4</h4>", toHTML(h4));
-    Assert.assertEquals("<h5>This is an H5</h5>", toHTML(h5));
-    Assert.assertEquals("<h6>This is an H6</h6>", toHTML(h6));
-  }
-
-  @Test
-  public void testHeadingATX2() throws Exception {
-    List<String> h1 = Arrays.asList("# This is an H1 #");
-    List<String> h2 = Arrays.asList("## This is an H2 ##");
-    List<String> h3 = Arrays.asList("### This is an H3 ###");
-    List<String> h4 = Arrays.asList("#### This is an H4 ####");
-    List<String> h5 = Arrays.asList("##### This is an H5 #####");
-    List<String> h6 = Arrays.asList("###### This is an H6 ######");
+  public void testHeadingATX() {
+    List<String> h1 = List.of("# This is an H1");
+    List<String> h2 = List.of("## This is an H2");
+    List<String> h3 = List.of("### This is an H3");
+    List<String> h4 = List.of("#### This is an H4");
+    List<String> h5 = List.of("##### This is an H5");
+    List<String> h6 = List.of("###### This is an H6");
     Assert.assertEquals("<h1>This is an H1</h1>", toHTML(h1));
     Assert.assertEquals("<h2>This is an H2</h2>", toHTML(h2));
     Assert.assertEquals("<h3>This is an H3</h3>", toHTML(h3));
@@ -83,30 +63,46 @@ public class HTMLBlockParserTest {
   }
 
   @Test
-  public void testBlockquotes() throws Exception {
-    List<String> q1 = Arrays.asList("> Hello");
+  public void testHeadingATX2() {
+    List<String> h1 = List.of("# This is an H1 #");
+    List<String> h2 = List.of("## This is an H2 ##");
+    List<String> h3 = List.of("### This is an H3 ###");
+    List<String> h4 = List.of("#### This is an H4 ####");
+    List<String> h5 = List.of("##### This is an H5 #####");
+    List<String> h6 = List.of("###### This is an H6 ######");
+    Assert.assertEquals("<h1>This is an H1</h1>", toHTML(h1));
+    Assert.assertEquals("<h2>This is an H2</h2>", toHTML(h2));
+    Assert.assertEquals("<h3>This is an H3</h3>", toHTML(h3));
+    Assert.assertEquals("<h4>This is an H4</h4>", toHTML(h4));
+    Assert.assertEquals("<h5>This is an H5</h5>", toHTML(h5));
+    Assert.assertEquals("<h6>This is an H6</h6>", toHTML(h6));
+  }
+
+  @Test
+  public void testBlockquotes() {
+    List<String> q1 = List.of("> Hello");
     Assert.assertEquals("<blockquote><p>Hello</p></blockquote>", toHTML(q1));
   }
 
   @Test
-  public void testUnorderedList() throws Exception {
-    List<String> list1 = Arrays.asList(" * Red", " * Green", " * Blue");
-    List<String> list2 = Arrays.asList(" + Red", " + Green", " + Blue");
-    List<String> list3 = Arrays.asList(" - Red", " - Green", " - Blue");
+  public void testUnorderedList() {
+    List<String> list1 = List.of(" * Red", " * Green", " * Blue");
+    List<String> list2 = List.of(" + Red", " + Green", " + Blue");
+    List<String> list3 = List.of(" - Red", " - Green", " - Blue");
     Assert.assertEquals("<ul><li>Red</li><li>Green</li><li>Blue</li></ul>", toHTML(list1));
     Assert.assertEquals("<ul><li>Red</li><li>Green</li><li>Blue</li></ul>", toHTML(list2));
     Assert.assertEquals("<ul><li>Red</li><li>Green</li><li>Blue</li></ul>", toHTML(list3));
   }
 
   @Test
-  public void testParagraphs() throws Exception {
-    List<String> p1 = Arrays.asList("Hi!");
-    List<String> p2 = Arrays.asList("Hi!","","Welcome");
-    List<String> p3 = Arrays.asList("Hi!","Welcome");
-    List<String> p4 = Arrays.asList("Hi!","Welcome","","Test");
-    List<String> p5 = Arrays.asList("Hi!","","Welcome","Test");
-    List<String> p6 = Arrays.asList("Hi!","","Welcome","","Test");
-    List<String> p7 = Arrays.asList("This line is longer than sixty-six characters and should continue without", "a line break");
+  public void testParagraphs() {
+    List<String> p1 = List.of("Hi!");
+    List<String> p2 = List.of("Hi!","","Welcome");
+    List<String> p3 = List.of("Hi!","Welcome");
+    List<String> p4 = List.of("Hi!","Welcome","","Test");
+    List<String> p5 = List.of("Hi!","","Welcome","Test");
+    List<String> p6 = List.of("Hi!","","Welcome","","Test");
+    List<String> p7 = List.of("This line is longer than sixty-six characters and should continue without", "a line break");
     Assert.assertEquals("<p>Hi!</p>", toHTML(p1));
     Assert.assertEquals("<p>Hi!</p><p>Welcome</p>", toHTML(p2));
     Assert.assertEquals("<p>Hi!<br/>\nWelcome</p>", toHTML(p3));
@@ -117,11 +113,11 @@ public class HTMLBlockParserTest {
   }
 
   @Test
-  public void testOrderedList() throws Exception {
-    List<String> list1 = Arrays.asList(" 1. Bird", " 2. McHale", " 3. Parish");
-    List<String> list2 = Arrays.asList(" 1. Bird", " 1. McHale", " 1. Parish");
-    List<String> list3 = Arrays.asList(" 7. Bird", " 8. McHale", " 9. Parish");
-    List<String> list4 = Arrays.asList(" 3. Bird", " 1. McHale", " 8. Parish");
+  public void testOrderedList() {
+    List<String> list1 = List.of(" 1. Bird", " 2. McHale", " 3. Parish");
+    List<String> list2 = List.of(" 1. Bird", " 1. McHale", " 1. Parish");
+    List<String> list3 = List.of(" 7. Bird", " 8. McHale", " 9. Parish");
+    List<String> list4 = List.of(" 3. Bird", " 1. McHale", " 8. Parish");
     Assert.assertEquals("<ol><li>Bird</li><li>McHale</li><li>Parish</li></ol>", toHTML(list1));
     Assert.assertEquals("<ol><li>Bird</li><li>McHale</li><li>Parish</li></ol>", toHTML(list2));
     Assert.assertEquals("<ol start=\"7\"><li>Bird</li><li>McHale</li><li>Parish</li></ol>", toHTML(list3));
@@ -129,28 +125,28 @@ public class HTMLBlockParserTest {
   }
 
   @Test
-  public void testOrderedListEscape() throws Exception {
-    List<String> list1 = Arrays.asList(" 1986. What a great season.");
-    List<String> list2 = Arrays.asList(" 1986\\. What a great season.");
+  public void testOrderedListEscape() {
+    List<String> list1 = List.of(" 1986. What a great season.");
+    List<String> list2 = List.of(" 1986\\. What a great season.");
     Assert.assertEquals("<ol start=\"1986\"><li>What a great season.</li></ol>", toHTML(list1));
     Assert.assertEquals("<p>1986. What a great season.</p>", toHTML(list2));
   }
 
   @Test
-  public void testCodeBlock() throws Exception {
-    List<String> pre = Arrays.asList("    This is a code block.");
+  public void testCodeBlock() {
+    List<String> pre = List.of("    This is a code block.");
     Assert.assertEquals("<pre>This is a code block.</pre>", toHTML(pre));
   }
 
 
   @Test
-  public void testFencedCode() throws Exception {
-    List<String> fencedCode1 = Arrays.asList("```", "function() { return 'Hello!';}", "```");
-    List<String> fencedCode2 = Arrays.asList("```javascript", "function() { return 'Hello!';}", "```");
-    List<String> fencedCode3 = Arrays.asList("```", "function() {", "  return 'Hello!';", "}", "```");
-    List<String> fencedCode4 = Arrays.asList("```", "function() {", "  if (a", "  > b) then a = b;", "}", "```");
-    List<String> fencedCode5 = Arrays.asList("```", "function() {","","return 'Hello!';}", "```");
-    List<String> fencedCode6 = Arrays.asList("```", "<report>","  <errors>","    <error>", "```");
+  public void testFencedCode() {
+    List<String> fencedCode1 = List.of("```", "function() { return 'Hello!';}", "```");
+    List<String> fencedCode2 = List.of("```javascript", "function() { return 'Hello!';}", "```");
+    List<String> fencedCode3 = List.of("```", "function() {", "  return 'Hello!';", "}", "```");
+    List<String> fencedCode4 = List.of("```", "function() {", "  if (a", "  > b) then a = b;", "}", "```");
+    List<String> fencedCode5 = List.of("```", "function() {","","return 'Hello!';}", "```");
+    List<String> fencedCode6 = List.of("```", "<report>","  <errors>","    <error>", "```");
     Assert.assertEquals("<pre>\nfunction() { return 'Hello!';}\n</pre>", toHTML(fencedCode1));
     Assert.assertEquals("<pre><code class=\"javascript\">\nfunction() { return 'Hello!';}\n</code></pre>", toHTML(fencedCode2));
     Assert.assertEquals("<pre>\nfunction() {\n  return 'Hello!';\n}\n</pre>", toHTML(fencedCode3));
@@ -160,8 +156,8 @@ public class HTMLBlockParserTest {
   }
 
   @Test
-  public void testUC1() throws Exception {
-    List<String> mixed = Arrays.asList("`coconut`");
+  public void testUC1() {
+    List<String> mixed = List.of("`coconut`");
     Assert.assertEquals("<p><code>coconut</code></p>", toHTML(mixed));
   }
 
@@ -176,57 +172,57 @@ public class HTMLBlockParserTest {
     state.commit();
     Assert.assertNull(state.current());
     // Empty fragment
-    state.push(Name.section);
-    Assert.assertTrue(state.isElement(Name.section));
+    state.push(Name.SECTION);
+    Assert.assertTrue(state.isElement(Name.SECTION));
     state.commit();
-    Assert.assertFalse(state.isElement(Name.section));
+    Assert.assertFalse(state.isElement(Name.SECTION));
     Assert.assertNull(state.current());
     // Empty fragment with paragraph
-    state.push(Name.section);
-    state.push(Name.p, "test");
-    Assert.assertTrue(state.isElement(Name.p));
+    state.push(Name.SECTION);
+    state.push(Name.P, "test");
+    Assert.assertTrue(state.isElement(Name.P));
     state.commit();
-    Assert.assertFalse(state.isElement(Name.p));
-    Assert.assertTrue(state.isElement(Name.section));
+    Assert.assertFalse(state.isElement(Name.P));
+    Assert.assertTrue(state.isElement(Name.SECTION));
   }
 
   @Test
   public void testStateCurrent() {
     State state = new State();
     Assert.assertNull(state.current());
-    state.push(Name.section);
-    Assert.assertEquals(Name.section, state.current().getElement());
-    Assert.assertNotEquals(Name.p, state.current().getElement());
-    state.push(Name.p);
-    Assert.assertNotEquals(Name.section, state.current().getElement());
-    Assert.assertEquals(Name.p, state.current().getElement());
+    state.push(Name.SECTION);
+    Assert.assertEquals(Name.SECTION, state.current().getElement());
+    Assert.assertNotEquals(Name.P, state.current().getElement());
+    state.push(Name.P);
+    Assert.assertNotEquals(Name.SECTION, state.current().getElement());
+    Assert.assertEquals(Name.P, state.current().getElement());
   }
 
   @Test
   public void testStateIsElement() {
     State state = new State();
     Assert.assertFalse(state.isElement(null));
-    Assert.assertFalse(state.isElement(Name.section));
-    Assert.assertFalse(state.isElement(Name.p));
-    state.push(Name.section);
-    Assert.assertTrue(state.isElement(Name.section));
-    Assert.assertFalse(state.isElement(Name.p));
-    state.push(Name.p);
-    Assert.assertFalse(state.isElement(Name.section));
-    Assert.assertTrue(state.isElement(Name.p));
+    Assert.assertFalse(state.isElement(Name.SECTION));
+    Assert.assertFalse(state.isElement(Name.P));
+    state.push(Name.SECTION);
+    Assert.assertTrue(state.isElement(Name.SECTION));
+    Assert.assertFalse(state.isElement(Name.P));
+    state.push(Name.P);
+    Assert.assertFalse(state.isElement(Name.SECTION));
+    Assert.assertTrue(state.isElement(Name.P));
   }
 
   @Test
   public void testStateIsDescendantOf() {
     State state = new State();
-    Assert.assertFalse(state.isDescendantOf(Name.p));
-    state.push(Name.section);
-    Assert.assertFalse(state.isDescendantOf(Name.p));
-    state.push(Name.p);
-    Assert.assertTrue(state.isDescendantOf(Name.p));
-    state.push(Name.strong);
-    Assert.assertTrue(state.isDescendantOf(Name.p));
-    Assert.assertTrue(state.isDescendantOf(Name.section));
+    Assert.assertFalse(state.isDescendantOf(Name.P));
+    state.push(Name.SECTION);
+    Assert.assertFalse(state.isDescendantOf(Name.P));
+    state.push(Name.P);
+    Assert.assertTrue(state.isDescendantOf(Name.P));
+    state.push(Name.STRONG);
+    Assert.assertTrue(state.isDescendantOf(Name.P));
+    Assert.assertTrue(state.isDescendantOf(Name.SECTION));
   }
 
   /**
